--- a/app/src/main/res/layout/fragment_edit_image.xml
+++ b/app/src/main/res/layout/fragment_edit_image.xml
@@ -4,8 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
-    android:paddingLeft="1dp"
-    android:paddingRight="1dp"
+    android:orientation="vertical"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     tools:context=".EditImageFragment">
 
     <LinearLayout
