--- a/app/src/main/res/layout/fragment_filter_list.xml
+++ b/app/src/main/res/layout/fragment_filter_list.xml
@@ -12,9 +12,6 @@
        android:scrollbars="none"
        android:clipChildren="false"
        android:layout_width="match_parent"
-       android:layout_height="wrap_content">
-
-
-   </androidx.recyclerview.widget.RecyclerView>
+       android:layout_height="wrap_content"/>
 
 </FrameLayout>
